--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -21,9 +21,9 @@
       <p>📍 <%= @tree.address %></p>
     </div>
 
-    <%# unless current_user == @tree.user %>
-      <%#= render 'shared/form_adoption', locales: [ @tree, Adoption.new ]%>
-    <%# end %>
+    <% unless current_user == @tree.user %>
+      <%= render 'shared/form_adoption', locales: [ @tree, Adoption.new ]%>
+    <% end %>
   </div>
 
   <div class="d-flex">
@@ -56,5 +56,3 @@
   </div>
 
 </div>
-
-<%= render "shared/form_adoption", locales: [@tree, Adoption.new] %>
