adding cloudinary with photo in seed

--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -6,7 +6,9 @@
   <div class="grid grid--3-cols grid--2-cols grid-margin-bottom">
       <% @trees.each do |tree| %>
         <%= link_to tree_path(tree) do %>
-          <div class="card-tree">
+          <div class="card-tree"
+               style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+                                        url('<%= cl_image_path tree.photo.key, height: 300, object_fit: :contain %>')">
             <h4 class="title"><%= tree.name %></h4>
             <p class= "price"><%= tree.price %>€ / par an</p>
           </div>
