--- a/app/views/trees/_form_tree.html.erb
+++ b/app/views/trees/_form_tree.html.erb
@@ -24,6 +24,7 @@
                                     "Pear",
                                     "Plum"] %>
     <%= f.input :description %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
